<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="#9C7D7D"
        android:text="@string/details"
        android:layout_marginTop="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:text="@string/name1"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details"
        android:layout_marginTop="150dp"
        android:layout_marginStart="20dp"
        android:text="@string/roll_no"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/edittext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@+id/text1"
        app:layout_constraintTop_toTopOf="@+id/details"
        android:layout_marginTop="80dp"
        android:layout_marginStart="70dp"
        android:inputType="text"
        android:gravity="center"
        android:textColor="#E91E63"

        android:hint="@string/gopi"
        android:autofillHints="@string/geo" />
    <EditText
        android:id="@+id/edittext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@+id/text1"
        app:layout_constraintTop_toTopOf="@+id/details"
        android:layout_marginTop="130dp"
        android:layout_marginStart="75dp"
        android:inputType="number"
        android:gravity="center"
        android:textColor="#E91E63"
        android:autofillHints="enter roll number"
        tools:ignore="LabelFor" />
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edittext2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/login"
        android:layout_marginBottom="220dp"
        />

    <FrameLayout
        android:id="@+id/framel"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:text="@string/left_top_corner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:text="@string/top_center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:text="@string/top_right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:text="@string/left_bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/center_bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/right_bottom" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_center"
            android:src="@drawable/image_hello" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@color/black"
            android:text="@string/geo_mathew"
            android:textColor="@color/white" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>