<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/hello_student"
        android:textColor="@color/purple_700"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text1display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/name2"
        android:textColor="#FA0F0F"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text2display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/roll1"
        android:textColor="#DF1616"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/hello_image"
            android:src="@drawable/image_hello" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:contentDescription="@string/hello_image"
            android:src="@drawable/image_hello" />
    </LinearLayout>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excellent" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outstanding" />

    </RadioGroup>

    <Button
        android:id="@+id/next_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#2D9832"
        android:layout_marginTop="50dp"
        android:text="@string/next_page"
        android:textColor="#D61971"/>

</LinearLayout>